fix(api): remove overflow hidden from a tag

--- a/src/app/homepage/api/api-list/api-list.component.scss
+++ b/src/app/homepage/api/api-list/api-list.component.scss
@@ -20,7 +20,6 @@ a {
   color: $black-color;
   display: inline-block;
   line-height: 16px;
-  overflow: hidden;
   text-overflow: ellipsis;
 
   .item-title {
